Started implementing location code to get user’s place

--- a/PrivateYelp/PrivateYelp/Info.plist
+++ b/PrivateYelp/PrivateYelp/Info.plist
@@ -60,5 +60,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Curator uses your location to find the place you&apos;re at!</string>
 </dict>
 </plist>
