Disabled dark mode UI

--- a/PrivateYelp/PrivateYelp/Info.plist
+++ b/PrivateYelp/PrivateYelp/Info.plist
@@ -64,5 +64,7 @@
 	<string>Curator uses your location to find the place you&apos;re at!</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Curation needs to be able to save photos to your reviews!</string>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
 </dict>
 </plist>
