Disabled landscape mode

--- a/PrivateYelp/PrivateYelp/Info.plist
+++ b/PrivateYelp/PrivateYelp/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Curator uses your location to find the place you're at!</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Curation needs to be able to save photos to your reviews!</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -50,8 +54,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
@@ -60,10 +62,6 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Curator uses your location to find the place you&apos;re at!</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Curation needs to be able to save photos to your reviews!</string>
 	<key>UIUserInterfaceStyle</key>
 	<string>Light</string>
 </dict>
